# auth_service

./: .flake8  pyproject.toml  settings.yml
src/: main.py
src/application/: amqp_handler.py  app.py  background.py  container.py
src/application/tasks/: clickhouse_table_creation.py  data_sync_task.py  user_ro_profile_tasks.py
src/domain/permission/: registry.py  schema.py
src/domain/role/: registry.py  schema.py
src/domain/user/: registry.py  schema.py
src/infrastructure/auth/: token_handler.py
src/infrastructure/base_entities/: base_mq.py
src/infrastructure/broker/: amqp_handler.py  kafka.py
src/infrastructure/database/: clickhouse_gateway.py
src/infrastructure/database/migrations/: env.py
src/infrastructure/database/migrations/seeds/: 0001_seed_add_roles.py  0002_seed_add_admin.py  0003_seed_add_roles.py  0004_seed_add_role_permissions.py
src/infrastructure/database/migrations/versions/: 0001_init_models.py  0002_add_user_flags.py  2024_09_20-0ac3725aff2d_added_foreign_keys.py  2024_09_20-19b5a4f199b9_create_models.py  2024_09_21-2954ac5db252_reformat_user_table.py  2024_09_21-c9e3971b2fbc_deleted_profile.py
src/infrastructure/database/models/: __init__.py  association.py  permission.py  profile.py  role.py  user.py
src/infrastructure/utils/asyncio/: asyncio_handlers.py
src/presentation/: auth.py  permission.py  role.py  user.py
src/service/: authenticate.py  permission.py  role.py  user.py
